--- a/app/translations/pl.yml
+++ b/app/translations/pl.yml
@@ -1,2 +1,5 @@
 pl:
-  greeting: Dzien dobry świecie
+  general:
+    greeting: Dzien dobry świecie
+  personal:
+    hello: 'Cześć %{name}. Zerknij na moją stronę www: %{url}'
